<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="productDetailViewModel"
            type="hu.unideb.shoppinglist.pages.fragments.productdetail.ProductDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_product_detail"
            android:textColor="@color/primary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561" />

        <TableLayout
            android:id="@+id/tableLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:id="@+id/productNameTable"
                    android:layout_weight="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/product_detail_fragment_product_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/productName"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textSize="16sp"
                    app:productName="@{productDetailViewModel.product}" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/productPieceTable"
                    android:layout_weight="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/product_detail_fragment_product_piece"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/productPiece"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textSize="16sp"
                    app:productQuantity="@{productDetailViewModel.product}" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/shopNameTable"
                    android:layout_weight="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/product_detail_fragment_product_shop_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/shopName"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textSize="16sp"
                    app:shopName="@{productDetailViewModel.product}" />
            </TableRow>


            <TableRow>

                <TextView
                    android:id="@+id/addDateTable"
                    android:layout_weight="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/product_detail_fragment_product_add_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/addDate"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textSize="16sp"
                    app:addDate="@{productDetailViewModel.product}" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/purchaseDateTable"
                    android:layout_weight="20"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/product_detail_fragment_product_purchase_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/purchaseDate"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:textSize="16sp"
                    app:purchaseDate="@{productDetailViewModel.product}" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>